update code to fix fullscreen functionality on mobile

--- a/style.css
+++ b/style.css
@@ -285,7 +285,7 @@ select > option {
   }
 
   .video-fullscreen {
-    height: 100%;
+    height: 97.5vh;
     border-radius: 0;
   }
 }
